refactor: clean up logger context and tests.

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 	},
     "autoload-dev": {
         "psr-4": {
-            "LoggerExtra\\Tests\\": "test/src/"
+            "LoggerExtra\\Tests\\": "tests/src/"
         }
     }
 }
