--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
         "phpspec/prophecy": "^1.20",
         "phpspec/prophecy-phpunit": "^2.3",
         "phpunit/phpunit": "^10.5",
-        "dealerdirect/phpcodesniffer-composer-installer": "^1.0"
+        "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
+        "symfony/http-foundation": "^7.2",
+        "symfony/http-kernel": "^7.2",
+        "symfony/routing": "^7.2"
     },
     "config": {
         "allow-plugins": {
